--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     }
   },
   "dependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "express": "^4.16.3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
@@ -52,11 +57,6 @@
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.42",
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "@babel/preset-react": "^7.0.0-beta.42",
-    "@babel/register": "^7.0.0-beta.42",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta",
     "eslint": "^4.19.1",
