--- a/package.json
+++ b/package.json
@@ -48,38 +48,40 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "express": "^4.16.3",
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
+    "express": "^4.16.4",
     "prop-types": "^15.6.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-router-dom": "^4.2.2",
     "webpack-config": "^7.5.0",
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^8.0.0-beta",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.7.0",
-    "husky": "^0.14.3",
+    "babel-eslint": "^10.0.0",
+    "babel-loader": "^8.0.4",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "husky": "^1.0.0",
     "hutber-conventional-changelog": "^2.0.1",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^8.0.0",
     "postcss-fontpath": "^1.0.0",
     "postcss-load-config": "^2.0.0",
-    "postcss-loader": "^2.1.6",
+    "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.0",
-    "postcss-nested": "^3.0.0",
-    "postcss-simple-vars": "^4.1.0",
+    "postcss-nested": "^4.0.0",
+    "postcss-simple-vars": "^5.0.0",
     "postcss-strip-inline-comments": "^0.1.5",
-    "prettier": "^1.13.7",
-    "universal-hot-reload": "hutber/universal-hot-reload",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-serve": "^0.2.0"
+    "prettier": "^1.15.2",
+    "universal-hot-reload": "github:hutber/universal-hot-reload",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.0.13",
+    "webpack-serve": "^2.0.0"
   }
 }
