--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "razzle start",
     "build": "razzle build",
+    "api": "nodemon ./api/app.js",
     "test": "test --env=jsdom",
     "test:watch": "razzle test --env=jsdom",
     "start:prod": "NODE_ENV=production node build/server.js",
@@ -42,7 +43,21 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "body-parser": "^1.18.3",
+    "boom": "^7.2.2",
+    "cors": "^2.8.4",
+    "errorhandler": "^1.5.0",
+    "express-boom": "^2.0.0",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.2.2",
+    "mongoose": "^5.1.3",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^2.1.0",
