chore: creating history for app

--- a/package.json
+++ b/package.json
@@ -36,15 +36,20 @@
     "@babel/preset-env": "^7.1.6",
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "express": "4.16.4",
+    "history": "^4.7.2",
     "react": "^16.6.3",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
     "react-dom": "^16.6.3",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.3.1",
+    "react-router-scroll-top": "^0.1.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "connected-react-router": "^5.0.1",
     "cz-conventional-changelog": "^2.1.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
